# jot-nautical-notes

./: .gitignore  README.md  install.sh  jot  pyproject.toml  uninstall.sh
jot_core/: __init__.py  cli.py  config.py  frontmatter.py  index.py  models.py  notes.py  output.py  report.py  search.py  services.py  storage.py  taskwarrior.py  templates.py
jot_tui/: app.py
templates/: chain-note.md  project-note.md  task-note.md
tests/: test_jot.py
